sandbox/output
StockProfit.cpp:9:9: error: use of undeclared identifier 'prices'
    if (prices.size() == 1) {
        ^
StockProfit.cpp:11:21: error: no member named 'push_bakc' in 'std::vector<int, std::allocator<int> >'; did you mean 'push_back'?
        transaction.push_bakc(PASS);
                    ^~~~~~~~~
                    push_back
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:919:7: note: 'push_back' declared here
      push_back(value_type&& __x)
      ^
2 errors generated.
make: *** [test] Error 1
